--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,48 @@
 .hidden {
     display: none;
 }
+
+.container {
+    border: 1px solid #ebebeb;
+}
+
+li:nth-child(odd).header {
+    background-color: #983441;
+    color: #FFFFFF;
+}
+
+ul {
+    list-style: none;
+    padding: 0;
+}
+
+li {
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+
+li:nth-child(odd) {
+    background-color: #F4F4F4;
+}
+
+li:nth-child(even) {
+    background-color: #F8F8F8;
+}
+
+.column {
+    display: inline;
+}
+
+img {
+    padding-left: 15px;
+    width: 50px;
+    height: 50px;
+}
+
+.title {
+    color: #125277;
+    font-size: 1em;
+    font-family: Arial, Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    padding-left: 20px;
+}
