--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -64,14 +64,31 @@ span {
 
 .author {
     width: 10%;
+    text-align: left;
 }
 
 .word-count {
     width: 5%;
+    text-align: center;
 }
 
 .pubished {
     width: 10%;
+    text-align: center;
+}
+
+.author-span {
+    margin-top: 30px;
+    margin-left: 15px;
+    color: #42738d;
+    font-family: sans-serif;
+    font-size: .7em;
+}
+
+.black-text-span {
+    font-family: Arial, Arial, Helvetica, sans-serif;
+    font-size: .8em;
+    margin-top: 30px;
 }
 
 .title-span {
