--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -53,6 +53,22 @@ button {
     height: 75px;
 }
 
+.header {
+    background: linear-gradient(#b33e4e, #802b37);
+    background: -moz-linear-gradient(#b33e4e, #802b37);
+    color: #FFFFFF;
+    text-transform: uppercase;
+    font-family: sans-serif;
+    font-size: .8em;
+    font-weight: bold;
+}
+
+.header span {
+    text-transform: uppercase;
+    margin-left: 10px;
+    margin-top: 30px;
+}
+
 .header-words {
     width: 6%;
 }
@@ -85,28 +101,12 @@ li {
     border-bottom: 1px solid rgba(0,0,0,.1);
 }
 
-li:nth-child(odd).header {
-    background: linear-gradient(#b33e4e, #802b37);
-    background: -moz-linear-gradient(#b33e4e, #802b37);
-    color: #FFFFFF;
-    text-transform: uppercase;
-    font-family: sans-serif;
-    font-size: .8em;
-    font-weight: bold;
-}
-
 li:nth-child(odd) {
     background-color: #F4F4F4;
 }
 
 li:nth-child(even) {
     background-color: #F8F8F8;
-}
-
-li:nth-child(odd).header span {
-    text-transform: uppercase;
-    margin-left: 10px;
-    margin-top: 30px;
 }
 
 .pubished {
